[gd_scene load_steps=4 format=2]

[ext_resource path="res://scr/materialObtainer.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 250.0

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[node name="materialObtainer" type="Node2D"]
script = ExtResource( 1 )

[node name="vacuum" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
space_override = 3
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 4096.0
linear_damp = 1.0

[node name="shape" type="CollisionShape2D" parent="vacuum"]
shape = SubResource( 1 )

[node name="obtainer" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false
space_override = 3
gravity_point = true
gravity_vec = Vector2( 0, 0 )
gravity = 4096.0

[node name="shape" type="CollisionShape2D" parent="obtainer"]
shape = SubResource( 2 )

[connection signal="body_entered" from="vacuum" to="." method="_on_vacuum_body_entered"]
[connection signal="body_exited" from="vacuum" to="." method="_on_vacuum_body_exited"]
[connection signal="body_entered" from="obtainer" to="." method="_on_obtainer_body_entered"]
